[gd_scene load_steps=9 format=3 uid="uid://bsvpjkmqape33"]

[ext_resource type="Script" path="res://levels/celar/Game2P/game_2p.gd" id="1_2sb8w"]
[ext_resource type="Texture2D" uid="uid://b6uy0nc4cqfjc" path="res://levels/celar/Game2P/assets/caixas.png" id="2_18syt"]
[ext_resource type="PackedScene" uid="uid://w0qpaga3tw4k" path="res://utilities/scenes/back_arrow/BackArrow.tscn" id="3_kstoe"]
[ext_resource type="PackedScene" uid="uid://d28lalfsdfiea" path="res://levels/celar/Game2P/box/pa.tscn" id="6_6mnfq"]
[ext_resource type="PackedScene" uid="uid://nx6glnbt3evs" path="res://levels/celar/Game2P/box/garfo3.tscn" id="6_vu2tx"]
[ext_resource type="PackedScene" uid="uid://bh22ri2lcdpkp" path="res://levels/chicken_coop/Game1E/card_stack/card_stack.tscn" id="6_xb5cd"]
[ext_resource type="PackedScene" uid="uid://ovi2uu0w8ey8" path="res://levels/celar/Game2P/box/garfo4.tscn" id="7_woxfi"]
[ext_resource type="PackedScene" uid="uid://d28yg1xunvrr" path="res://levels/celar/Game2P/box/escada.tscn" id="8_gvb5v"]

[node name="Game2p" type="Node2D"]
script = ExtResource("1_2sb8w")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-0.499977, 4.00003)
scale = Vector2(1.13379, 0.640625)
texture = ExtResource("2_18syt")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="BackArrow" parent="." instance=ExtResource("3_kstoe")]
position = Vector2(-498, 247)
scale = Vector2(0.400001, 0.400001)
scenePath = "res://levels/celar/barn.tscn"

[node name="CardSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, 251)

[node name="Pa" parent="." instance=ExtResource("6_6mnfq")]
position = Vector2(-454, -20)

[node name="Escada" parent="." instance=ExtResource("8_gvb5v")]
position = Vector2(351, -1)

[node name="Garfo3" parent="." instance=ExtResource("6_vu2tx")]
position = Vector2(-199, -3)

[node name="Garfo4" parent="." instance=ExtResource("7_woxfi")]
position = Vector2(50, -11)

[node name="CardStack" parent="." instance=ExtResource("6_xb5cd")]
visible = false
position = Vector2(182, -102)

[connection signal="card_frame_dropped" from="Pa" to="." method="_on_day_box_card_frame_dropped"]
[connection signal="card_frame_dropped" from="Escada" to="." method="_on_night_box_card_frame_dropped"]
[connection signal="card_frame_dropped" from="Garfo3" to="." method="_on_day_box_card_frame_dropped"]
[connection signal="card_frame_dropped" from="Garfo4" to="." method="_on_day_box_card_frame_dropped"]
